Anonymous | Login | 2021-01-18 07:11 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0030963 | Open CASCADE | [OCCT] OCCT:Visualization | public | 2019-09-12 15:51 | 2019-09-15 10:55 | ||||
Reporter | iko | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.2.0 | ||||||||
Target Version | [OCCT] 7.4.0 | Fixed in Version | [OCCT] 7.4.0 | ||||||
Summary | 0030963: Visualization, TKOpenGl - texture unit error during FFP global texture's parameters processing | ||||||||
Description | Fixed function pipeline supposes to use quite small amount of textures units. It causes an error when units not from this set are used in functions related to FFP. | ||||||||
Steps To Reproduce | Not possible | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not required | ||||||||
Attached Files | |||||||||
![]() |
|||||||||||
|
![]() |
|
(0087023) git (administrator) 2019-09-12 16:14 |
Branch CR30963 has been created by iko. SHA-1: 750ebeacee75695572d0113d793355fbf8093c31 Detailed log of new commits: Author: iko Date: Thu Sep 12 16:07:30 2019 +0300 0030963: Visualization - texture unit error during FFP global texture's parameters processing The texture units used in FFP texture functions are correct now. |
(0087025) git (administrator) 2019-09-12 16:40 |
Branch CR30963 has been updated forcibly by iko. SHA-1: 3a991e0bd69619edc8a5a957ea9f0e5d7bdec97d |
(0087031) git (administrator) 2019-09-13 08:47 |
Branch CR30963 has been updated forcibly by iko. SHA-1: 8da51272b044294c799a0066c11ca7f549a79f5a |
(0087032) git (administrator) 2019-09-13 10:18 |
Branch CR30963 has been updated forcibly by iko. SHA-1: 372539fa516b694bf79c724ed8cdae6b8e719ee6 |
(0087042) iko (developer) 2019-09-13 12:10 |
Please review changes. Testing results: http://vm-jenkins-test-12.nnov.opencascade.com:8080/job/CR30963-master-IKO-OCCT-Debian80-64-opt-test-compare/3/ [^] http://vm-jenkins-test-12.nnov.opencascade.com:8080/job/CR30963-master-IKO-OCCT-Windows-64-VC14-opt-test-compare/3/ [^] http://vm-jenkins-test-12.nnov.opencascade.com:8080/job/CR30963-master-IKO-Products-Debian80-64-opt-test-compare/2/ [^] http://vm-jenkins-test-12.nnov.opencascade.com:8080/job/CR30963-master-IKO-Products-Windows-64-VC14-opt-test-compare/2/ [^] |
(0087045) git (administrator) 2019-09-13 12:23 |
Branch CR30963 has been updated forcibly by kgv. SHA-1: c1fef06c848e7920e6c768ab76d565e756567740 |
(0087046) kgv (developer) 2019-09-13 12:23 |
Please raise the patch. |
(0087073) bugmaster (administrator) 2019-09-13 20:03 |
Combination - OCCT branch : CR30963 master SHA - 372539fa516b694bf79c724ed8cdae6b8e719ee6 5f5b1aed1c6e139bbd34314eca77ae7abcd8895c Products branch : master SHA - f9d0bd5e3a29d6a97b3f5f6354ea2397253ab4f8 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16824.840000000004 / 16836.290000000165 [-0.07%] Products Total CPU difference: 10543.030000000028 / 10553.510000000031 [-0.10%] Windows-64-VC14: OCCT Total CPU difference: 18321.09375 / 18300.0625 [+0.11%] Products Total CPU difference: 12365.640625 / 12227.453125 [+1.13%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0087092) git (administrator) 2019-09-15 10:55 |
Branch CR30963 has been deleted by inv. SHA-1: c1fef06c848e7920e6c768ab76d565e756567740 |
![]() |
|||
occt: master 5c225e8e
Timestamp: 2019-09-12 13:07:30 Author: iko Committer: bugmaster [ Details ] [ Diff ] |
0030963: Visualization, TKOpenGl - texture unit error during FFP global texture's parameters processing The texture units used in FFP texture functions are correct now. |
||
mod - src/OpenGl/OpenGl_Context.cxx | [ Diff ] [ File ] | ||
mod - src/OpenGl/OpenGl_Context.hxx | [ Diff ] [ File ] | ||
mod - src/OpenGl/OpenGl_Sampler.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-09-12 15:51 | iko | New Issue | |
2019-09-12 15:51 | iko | Assigned To | => iko |
2019-09-12 16:14 | git | Note Added: 0087023 | |
2019-09-12 16:19 | kgv | Target Version | 7.5.0 => 7.4.0 |
2019-09-12 16:20 | kgv | Relationship added | child of 0028912 |
2019-09-12 16:20 | kgv | Product Version | => 7.2.0 |
2019-09-12 16:20 | kgv | Summary | Visualization - texture unit error during FFP global texture's parameters processing => Visualization, TKOpenGl - texture unit error during FFP global texture's parameters processing |
2019-09-12 16:37 | kgv | Relationship added | related to 0030700 |
2019-09-12 16:40 | git | Note Added: 0087025 | |
2019-09-13 08:47 | git | Note Added: 0087031 | |
2019-09-13 10:18 | git | Note Added: 0087032 | |
2019-09-13 12:10 | iko | Note Added: 0087042 | |
2019-09-13 12:10 | iko | Assigned To | iko => kgv |
2019-09-13 12:10 | iko | Status | new => resolved |
2019-09-13 12:10 | iko | Steps to Reproduce Updated | View Revisions |
2019-09-13 12:23 | git | Note Added: 0087045 | |
2019-09-13 12:23 | kgv | Note Added: 0087046 | |
2019-09-13 12:23 | kgv | Assigned To | kgv => bugmaster |
2019-09-13 12:23 | kgv | Status | resolved => reviewed |
2019-09-13 20:02 | bugmaster | Test case number | => Not required |
2019-09-13 20:03 | bugmaster | Note Added: 0087073 | |
2019-09-13 20:03 | bugmaster | Status | reviewed => tested |
2019-09-15 10:51 | bugmaster | Changeset attached | => occt master 5c225e8e |
2019-09-15 10:51 | bugmaster | Status | tested => verified |
2019-09-15 10:51 | bugmaster | Resolution | open => fixed |
2019-09-15 10:55 | git | Note Added: 0087092 |
Copyright © 2000 - 2021 MantisBT Team |