0030963: Visualization, TKOpenGl - texture unit error during FFP global texture's parameters processing

The texture units used in FFP texture functions are correct now.